rustdocs/errors/rust-bitcoin-units-src-internal_macros.rs.txt
error[E0432]: unresolved import `impl_op_for_references`
  --> ../rust-bitcoin/units/src/internal_macros.rs:70:16
   |
70 | pub(crate) use impl_op_for_references;
   |                ^^^^^^^^^^^^^^^^^^^^^^ no `impl_op_for_references` in the root

error[E0432]: unresolved import `impl_add_assign`
  --> ../rust-bitcoin/units/src/internal_macros.rs:84:16
   |
84 | pub(crate) use impl_add_assign;
   |                ^^^^^^^^^^^^^^^ no `impl_add_assign` in the root

error[E0432]: unresolved import `impl_add_assign_for_results`
   --> ../rust-bitcoin/units/src/internal_macros.rs:111:16
    |
111 | pub(crate) use impl_add_assign_for_results;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `impl_add_assign_for_results` in the root

error[E0432]: unresolved import `impl_sub_assign_for_results`
   --> ../rust-bitcoin/units/src/internal_macros.rs:138:16
    |
138 | pub(crate) use impl_sub_assign_for_results;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `impl_sub_assign_for_results` in the root

error[E0432]: unresolved import `impl_sub_assign`
   --> ../rust-bitcoin/units/src/internal_macros.rs:152:16
    |
152 | pub(crate) use impl_sub_assign;
    |                ^^^^^^^^^^^^^^^ no `impl_sub_assign` in the root

error[E0432]: unresolved import `impl_mul_assign`
   --> ../rust-bitcoin/units/src/internal_macros.rs:166:16
    |
166 | pub(crate) use impl_mul_assign;
    |                ^^^^^^^^^^^^^^^ no `impl_mul_assign` in the root

error[E0432]: unresolved import `impl_div_assign`
   --> ../rust-bitcoin/units/src/internal_macros.rs:180:16
    |
180 | pub(crate) use impl_div_assign;
    |                ^^^^^^^^^^^^^^^ no `impl_div_assign` in the root

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0432`.
